[package]
edition = "2018"
name = "docker-sync"
description = "Minimalistic, synchronous, read-only client for local Docker socket"
version = "0.1.0"
authors = ["Benoit Petit <bpetit@hubblo.org>"]
license = "Apache-2.0"
homepage = "https://github.com/bpetit/"
repository = "https://gitlab.com/kblobr/rust-docker.git"
documentation = "https://ghmlee.github.io/rust-docker/doc/docker"
readme = "README.md"
keywords = ["docker"]

[dependencies]
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"
isahc = "1.4.0"
http = "0.2.4"