[package]
edition = "2018"
name = "docker-sync"
description = "Minimalistic, synchronous, read-only client for local Docker socket"
version = "0.1.0"
authors = ["Benoit Petit <bpetit@hubblo.org>"]
license = "Apache-2.0"
homepage = "https://github.com/bpetit/rs-docker-sync"
repository = "https://github.com/bpetit/rs-docker-sync"
documentation = "https://docs.rs/docker-sync"
readme = "README.md"
keywords = ["docker"]

[dependencies]
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"
isahc = { version = "1.4.0", features = ["default", "json"] }
http = "0.2.4"
